--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -194,7 +194,7 @@ Source: [[https://github.com/cofi/evil-leader]]
 	"c"  'helm-flycheck
 	;; Add evil nerd commentary
 	"d"  'kill-this-buffer
-	"D"  'open-current-line-in-codebase-search
+	"D"  'ediff
 	"e"  'evil-exchange
 	"f"  'helm-imenu            ;; Jump to function in buffer
 	"g"  'magit-status
@@ -412,12 +412,10 @@ Make ediff a little evil
 Source: [[https://github.com/emacs-evil/evil-ediff]]
 #+BEGIN_SRC emacs-lisp 
 (use-package evil-ediff
-  :disabled t
-  :commands 'evil-ediff-init
   :diminish
-  :after evil
-  :init
-  (add-hook 'ediff-mode-hook 'evil-ediff-init))
+  :after (evil ediff)
+  :config
+  (evil-ediff-init))
 #+END_SRC
 
 *** evil-iedit-state
@@ -1308,8 +1306,7 @@ Easy diff between two files
 Source: [[https://www.gnu.org/software/emacs/manual/html_node/ediff/]]
 #+BEGIN_SRC emacs-lisp 
 (use-package ediff
-  :disabled t
-  :commands 'ediff-files
+  :commands 'ediff
   :diminish)
 #+END_SRC
 
