Disabled evil collection

--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -266,6 +266,7 @@ Source: [[https://github.com/emacs-evil/evil-collection]]
 #+BEGIN_SRC emacs-lisp 
 (use-package evil-collection
   :diminish
+:disabled t
   :after evil
   :init 
   (setq evil-collection-setup-minibuffer t)
@@ -667,6 +668,15 @@ Source: [[https://github.com/emacs-helm/helm]]
   ("M-x" . 'helm-M-x))
   :init
   :config
+  (define-key helm-map (kbd "M-j") 'helm-next-line)
+  (define-key helm-map (kbd "M-k") 'helm-previous-line)
+  (define-key helm-map (kbd "M-u") 'helm-previous-page)
+  (define-key helm-map (kbd "M-d") 'helm-next-page)
+  (add-hook 'helm-find-files-after-init-hook
+      (lambda ()
+        (progn
+          (define-key helm-find-files-map (kbd "M-h") 'helm-find-files-up-one-level)
+        (define-key helm-find-files-map (kbd "M-l") 'helm-ff-RET))))
   (helm-mode 1))
 #+END_SRC
 
