--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -313,7 +313,7 @@ Source: [[https://github.com/linktohack/evil-commentary]]
 #+BEGIN_SRC emacs-lisp 
 (use-package evil-commentary
   :diminish
-  :bind (:map evil-normal-state-local-map
+  :bind (:map evil-normal-state-map
   ("gc" . evil-commentary))
   :after evil
   :config
