--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -2633,4 +2633,8 @@ Source: [[https://www.emacswiki.org/emacs/NxmlMode]]
   (add-to-list 'auto-mode-alist
                (cons (concat "\\." (regexp-opt '("launch") t) "\\'")
                      'nxml-mode))
+  (add-hook 'nxml-mode-hook
+            (lambda ()
+              (make-variable-buffer-local 'indent-tabs-mode)
+              (setq indent-tabs-mode nil)))
 #+END_SRC
