--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -228,7 +228,6 @@ Source: [[https://github.com/cofi/evil-leader]]
       "!"  'restart-emacs
       ":"  'eval-expression
       "'"  'whitespace-mode
-      "*"  'google-this
       "a"  'ace-link
       "b"  'helm-mini             ;; Switch to another buffer
       "c"  'helm-flycheck
@@ -241,10 +240,12 @@ Source: [[https://github.com/cofi/evil-leader]]
       "G"  'git-timemachine       ;; Open git timemachine
       "i"  'use-package-report
       "l"  'helm-google
+      "L"  'google-this
       "'"  'whitespace-mode       ;; Show invisible characters
       "nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
       "nw" 'widen
       "o"  'delete-other-windows  ;; C-w o
+      "O"  'delete-window  ;; C-w o
       "p"  'helm-show-kill-ring
       "Pp"  'helm-projectile-switch-project
       "Pf"  'helm-projectile-find-file
@@ -257,7 +258,8 @@ Source: [[https://github.com/cofi/evil-leader]]
       "v"  'centered-cursor-mode
       "w"  'save-buffer
       "x"  'helm-M-x
-      "y"  'helm-yas-complete
+      "y"  'yas-expand
+      "Yh"  'helm-yas-complete
       "Yy"  'aya-create
       "YY"  'aya-create
       "Ye"  'aya-expand
