--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1020,6 +1020,20 @@ Source: [[https://github.com/company-mode/company-mode]]
   (use-package company
     :diminish
     :defer 15
+    :general
+    (:keymap 'company-active-map
+     "C-n" 'company-select-next-or-abort
+     "C-p" 'company-select-previous-or-abort
+     "C-j" 'company-select-next-or-abort
+     "C-k" 'company-select-previous-or-abort
+     "M-j" 'company-select-next
+     "M-k" 'company-select-previous)
+    (:keymap 'company-search-map
+     "C-j" 'company-select-next-or-abort
+     "C-k" 'company-select-previous-or-abort
+     "M-j" 'company-select-next
+     "M-k" 'company-select-previous
+     "<escape>" 'company-search-abort)
     :config
     (global-company-mode 1))
 #+END_SRC
