--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1922,6 +1922,8 @@ Source: [[https://github.com/CodeFalling/nlinum-relative]]
 #+BEGIN_SRC emacs-lisp 
   (use-package nlinum-relative
     :defer 15
+    :general
+    (jag--visual-def "n" 'nlinum-relative-mode)
     :diminish
     :config
     (global-nlinum-relative-mode t)
