--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1311,6 +1311,7 @@ Source: [[https://github.com/joaotavora/yasnippet]]
 #+BEGIN_SRC emacs-lisp 
   (use-package yasnippet
     :diminish
+    :commands 'yas-expand
     :defer t
     :config
     (yas-global-mode 1))
